@@ -18,7 +18,7 @@ from attic.helpers import Error, location_validator, format_time, \
     format_file_mode, ExcludePattern, exclude_path, adjust_patterns, to_localtime, \
     get_cache_dir, get_keys_dir, format_timedelta, prune_within, prune_split, \
     Manifest, remove_surrogates, update_excludes, format_archive, check_extension_modules, Statistics, \
-    is_cachedir
+    is_cachedir, bigint_to_int
 from attic.remote import RepositoryServer, RemoteRepository
 
 
@@ -272,7 +272,7 @@ Type "Yes I am sure" if you understand this and want to continue.\n""")
                         size = sum(size for _, size, _ in item[b'chunks'])
                     except KeyError:
                         pass
-                mtime = format_time(datetime.fromtimestamp(item[b'mtime'] / 10**9))
+                mtime = format_time(datetime.fromtimestamp(bigint_to_int(item[b'mtime']) / 1e9))
                 if b'source' in item:
                     if type == 'l':
                         extra = ' -> %s' % item[b'source']
